--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -7,7 +7,7 @@ title: "Story and Quiz − 私は父から研究を学んだ"
 このシリーズは、がんサバイバーの就労支援の話を軸に、研究方法や統計学の考え方を **ストーリー形式** で学ぶ読み物です。
 
 - 研究をはじめる前に、**「全体像」や「言葉の感覚」** をつかみたい人へ
-- 1話あたり数分で読めて、**なんとなくで核心がわかる** 軽い語り口
+- 1話あたり数分で読めて、**じんわりと核心がわかる** 軽い語り口
 - Study design → Clinical trial → Epidemiology → Causal inference → Publish  
   と読み進むうちに、医学研究の入り口と出口がつながります
 
