--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -13,7 +13,7 @@
 
 最初の1本はここからどうぞ。
 
-→ [**Study design I**](study-design-1.qmd)
+→ [Study design I](study-design-1.md)
 
 ------------------------------------------------------------------------
 
