--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -1,217 +1,164 @@
----
-format:
-  html:
-    toc: true
----
-<style>
-body {
-  margin: 0;
-  background: #ffffff;
-  color: #2b1f1a;
-  font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
-  font-size: 18px;
-  line-height: 1.55;
-}
-
-h1, h2, h3 {
-  font-family: "Georgia", "Times New Roman", serif;
-  color: #3a2a22;
-  font-weight: 600;
-}
-
-h3 {
-  margin-top: 2.4rem;
-}
-
-a {
-  color: #8b4a24;
-  text-decoration: none;
-}
-a:hover {
-  color: #6f3718;
-  text-decoration: underline;
-}
-
-.navbar {
-  background: #ffffff !important;
-  border-bottom: 1px solid #e6e0da;
-  margin-bottom: 0 !important;
-}
-.navbar .navbar-brand,
-.navbar .navbar-nav > li > a {
-  color: #3a2a22 !important;
-  border-bottom: 2px solid transparent;
-  padding-bottom: 2px;
-}
-.navbar .navbar-nav > li > a:hover {
-  border-bottom-color: #8b4a24;
-}
-
-.hero-text {
-  padding: 1.5rem 0;
-  color: #3a2a22;
-}
-
-.project-card {
-  border: 1px solid #e6e0da;
-  padding: 1.3rem 1.5rem;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.05);
-  background: #ffffff;
-  border-radius: 6px;
-  margin-bottom: 1.5rem;
-}
-
-.about-section {
-  border: 1px solid #e6e0da;
-  padding: 1.5rem;
-  border-radius: 0;
-  background: #ffffff;
-  margin-top: 2.5rem;
-}
-
-.about-section::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-.author-photo {
-  float: left;
-  margin-right: 1rem;
-  border-radius: 50%;
-}
-
-.btn-link {
-  display: inline-block;
-  border: 1px solid #8b4a24;
-  color: #8b4a24;
-  padding: 0.4rem 0.9rem;
-  font-size: 0.9rem;
-  border-radius: 3px;
-}
-.btn-link:hover {
-  background: #8b4a24;
-  color: #ffffff;
-}
-
-.content-narrow {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 1.8rem 1.2rem 2.5rem;
-}
-
-.hero-header {
-  margin-left: calc(50% - 50vw);
-  margin-right: calc(50% - 50vw);
-}
-
-.hero-header-img {
-  width: 100vw;
-  height: min(400px, 45vh);
-  object-fit: cover;
-  object-position: 50% 40%;
-  display: block;
-}
-
-.dialogue p {
-  line-height: 1.7;
-}
-.dialogue .voice-father p {
-  color: #7a3e1a !important;
-}
-.dialogue .voice-daughter p {
-  color: #234f7c !important;
-}
-.dialogue .voice-daughter,
-.dialogue .voice-father {
-  margin-bottom: 0.4rem;
-}
-
-.serif-text p {
-  font-family: "Georgia", "Times New Roman", serif;
-}
-.serif-block p {
-  font-family: "Georgia", "Times New Roman", serif;
-  font-size: 0.9em;  line-height: 1.6;
-}
-</style>
-
-::: hero-header
-![](../image/father-daughter.png){.hero-header-img}
-:::
-# Story and Quiz − Study design III
+# Story and Quiz − Study design II
 ::: {.serif-block}
-　　　　　　　　　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, PICO/PECO, survival/competing-risk, clinical trial
+　　　　　　　　　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, continuous/binary/count/survival
 :::
 
-### アウトカムってなに？
+------------------------------------------------------------------------
 
-:::: dialogue
+### データには型がある
+
+:::::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「さっきのアウトカムについてなんだけどね。ジャーナルクラブで臨床試験の論文を読むと出てくる”OS”とか”DFS”とかの略語もアウトカムだよね？実はよくわからないんだけど、当たり前のように使われているから質問しにくいんだ。DFSはがんの再発を調べてるみたいなんだけど。お父さん詳しい？」
+私「お父さんが、さっき、どの関数を使うかもアウトカムによって違うんだよっていってたじゃない？あれ、いまいちピンとこないんだけど。データなんて、全部数字じゃないの？」
 :::
 
 ::: voice-father
-お父さん「統計解析をしていて、OSとDFSを扱うことはあるよ。OSは全生存期間（overall survival）、DFSは無病生存期間（disease-free survival）のことだよね」
+お父さん「数字には違いないんだけどね。統計解析では、データの型がとても大事なんだ。代表的なのは、連続データ、2値データ、計数データ、生存時間データの4つ」
 :::
 
 ::: voice-daughter
-私「無病生存期間って再発までの日数のこと？」
+私「連続データって、年齢とか血圧みたいな測るやつでしょ？2値データもわかるよ。私が比較したいストーマ保有ありとなしとか」
 :::
 
 ::: voice-father
-お父さん「再発までの日数だったら無再発期間(relapse-free time)って言葉を選ぶかなあ」
+お父さん「ご名答。で、計数データは、交通事故の発生件数のような、数をカウントしたデータのこと。生存時間データは、たとえば寿命とかだね。死亡など特定のイベントが起こるまでの時間を扱うデータだよ。今回のがんサバイバー調査でいえば、手術から復職までの時間とか、再発までの時間とかね」
 :::
 
 ::: voice-daughter
-私「同じじゃないの？」
+私「いわれてみれば、たしかに種類が違うね。でも、昔受けたRの授業では、言われた通りにコード打ってただけだったなあ。t.test()とかglm()とかsurvfit()とか、なんか呪文みたいなのを」
 :::
 
 ::: voice-father
-お父さん「学術的には違うよ。再発を経験せずに、死亡することもあるでしょ。無病生存期間のポイントは、再発・2次がん・死亡のうち、**どれか最初のイベントまでの時間**を扱うこと。だから、再発だけでなく、死亡したり別のがんを発症したりしたときも、イベントとして扱われるんだ」
-:::
-
-![](study-design-2.png)
-
-::: voice-daughter
-私「イベント扱いって？」
-:::
-
-::: voice-father
-お父さん「生存時間データは、一般に特定のイベントまでの経過時間なんだ。端的にいうとね、無病生存期間のデータから“3年無病生存確率”を計算するとするでしょ。それは“イベントが起こらない確率”に相当するんだけど、意味合いとしては3年時点で、再発も2次がんも経験せず、生存できる確率を求めることになる」 **私「そういうことか」** お父さん「薬の臨床試験で用いられるアウトカムは、”エンドポイント”とよばれることもあるね。表に、がん臨床試験の主な生存時間エンドポイントを整理してあげるよ（Japan Clinical Oncology Group 2021）」
-:::
-
-| エンドポイント | イベント1 | イベント2 | イベント3 | イベント4 | 打ち切り日 |
-|------------|------------|------------|------------|------------|------------|
-| 全生存期間 | 死亡 |  |  |  | 最終生存確認日 |
-| 無増悪生存期間 | 死亡 | 増悪/再発 |  |  | 最終無増悪確認日 |
-| 無再発生存期間 | 死亡 | 再発 |  |  | 最終生存確認日 |
-| 無病生存期間 | 死亡 | 再発 | 2次がん |  | 最終生存確認日 |
-| 無イベント生存期間 | 死亡 | 寛解導入失敗 | 再発 | 2次がん | 最終生存確認日 |
-| 治療成功期間 | 死亡 | 治療中止（治療中の増悪/再発を含む） | プロトコール治療完了後の増悪/再発 |  | 最終治療継続確認日または最終無増悪確認日 |
-
-::: voice-daughter
-私「でかした！」
-:::
-
-::: voice-father
-お父さん「OSは、時間原点から死亡するまでの期間のこと。DFSは、時間原点から再発、2次がん、死亡のうち、最初のイベントまでの期間のこと。でも、さっき言ったみたいに、3年OSとか3年DFSという言い方をすることもある。この場合は期間じゃなくて確率の意味になる。OSとDFSの違いは、再発と2次がんが含まれること。そうすると、3年OSより3年DFSの方が、確率は小さくなるよね」
+お父さん「そうだね。パソコンある？」
 :::
 
 ::: voice-daughter
-私「時間原点についてもう少し説明してよ」
+私「へ」
 :::
 
 ::: voice-father
-お父さん「じゃあ、生存時間の原点について、典型的な決め方をいくつか紹介しようか。まず、DFSは根治手術後の再発状況を調べるため用いられるアウトカムだよね。だから、”手術日”がこの場合の時間原点の候補になる。手術日のように治療の起点がはっきりしている状況だと決めやすいよね。一方で、もし”退院日”を時間原点にすると、手術直後の死亡が評価対象にならなくなっちゃうから、研究によってはそこを批判されるかもしれない。もうひとつ典型的な決め方を挙げると、臨床試験の登録日があるかな。ランダム化臨床試験だと、登録日に治療をランダムに割付けるから、それを原点にして生存曲線を描くのが自然だよね」
+お父さん「パソコン。あるでしょ。RStudioインストールしよう」
 :::
-::::
 
+::: voice-daughter
+私「はあ、まあ声を掛けたのはこっちだからいいけど」
+:::
 
-::: {.callout-note title="シミュレーションデータ（再発あり）の生成"}
-前回の発展形として、シミュレーションデータを使って、全生存期間・無再発生存期間・無再発期間の違いをみてみましょう。 無再発期間の解析では、再発の前に死亡した患者の扱いが問題になります。これを競合リスク（competing risk）といいます。 死亡だけではなく再発を伴った生存時間データをRで生成します。全生存期間のイベントは「死亡」、全再発生存期間のイベントは「死亡と再発」です。無再発期間のイベントは「再発」ですが、死亡を競合リスクとして扱います。前回、競合リスクのない生存時間データを要約しましたが、そこで用いたのはKaplan-Meier曲線でしたよね。それに対して、競合リスクデータの解析では、Kaplan-Meier曲線ではなく、Aalen-Johansen曲線を用いるのが正式です。
+::: voice-father
+お父さん「Rではね、連続データを解析するなら、mean()、t.test()、lm() なんかがよく使われる」
+:::
 
--   ストーマ保有：2項分布（rbinom関数）から生成した2値データ
+::: voice-daughter
+私「はあ」
+:::
+
+::: voice-father
+お父さん「2値データを集計するときはtable()。p値を計算するときはchisq.test()、fisher.test()。複雑な解析はglm(family = binomial) みたいな回帰モデル。生存時間データだと、survfit()、coxph()、それからcifplot()みたいな関数が出てくる」
+:::
+
+::: voice-daughter
+私「そんなにいっぱい覚えられるわけないでしょ。Rの授業でも思ってたけど、そんなのあたかも呪文なんだって」
+:::
+
+::: voice-father
+お父さん「覚えなくていいよ」
+:::
+
+::: voice-daughter
+私「え、いいの？」
+:::
+
+::: voice-father
+お父さん「大事なのは、どの型のデータに、どんな関数をあてるのかをイメージできること。もっといえば、どんな確率分布を仮定しているかを、なんとなくでいいから思い浮かべてほしいんだ」
+:::
+
+::: voice-daughter
+私「確率分布？」
+:::
+
+::: voice-father
+お父さん「学部でやったでしょ。正規分布（normal distribution）は聞いたことある？」
+:::
+
+::: voice-daughter
+私「それくらいはね」
+:::
+
+::: voice-father
+お父さん「私たち統計家はね、統計解析の裏で、なんらかの確率分布を考えてる。連続データの正規分布とか、2値データの2項分布（binomial distribution）とか、計数データのPoisson分布とかね。生存時間データだと、標準的な分布ってわけじゃないんだけど、一番シンプルな分布は指数分布（exponential distribution）っていうんだ」
+:::
+
+::: voice-daughter
+私「はあ。それとRが関係するわけ？」
+:::
+
+::: voice-father
+お父さん「うん。たとえばさ、データを要約するための指標として、割合（proportion）と率（rate）ってのがある。日常生活でもよく使うでしょ？交通事故の発生率とか。でも、日常では、割合と率の違いを意識しないよね。でも、統計の世界では、割合は2項分布のパラメータ、率はPoisson分布のパラメータなんだ」
+:::
+
+::: voice-daughter
+私「割合と率なんて同じ意味でしょ？」
+:::
+
+::: voice-father
+お父さん「違う違う。割合ってパーセントで表すでしょ、女性割合が60%とか。でも、"東京都の1年あたりの交通事故の発生率"を例に考えてみてよ。パーセントにならなくない？交通事故が何回、起きたかを年で割ってるだけだから」
+:::
+
+::: voice-daughter
+私「ふーん。続けたまえ」
+:::
+
+::: voice-father
+お父さん「教科書どおりじゃなくていいんだ。"あ、これは正規分布っぽい連続データだから、このあたりの関数かな"とか、0/1のデータだから、このへんの関数かなって、感覚で結びつけられるといいよ。Rの関数もずっと覚えやすくなる」
+:::
+
+::: voice-daughter
+私「なるほどね。データの型と分布をイメージできれば、丸暗記不要ってことね。そいつははかどるわ」
+:::
+
+::: voice-father
+お父さん「そうそう。イメージがあれば、あとでマニュアルや本を見たときに、ああ、これのことかってつながるからね。じゃあ、Rでちょっとだけデモを見せてみようか。年齢（連続）、性別とストーマ（2値）、生存時間（生存時間データ）をシミュレーションして、簡単な解析をやってみるよ」
+:::
+
+::: voice-daughter
+私「また呪文が出てくるんでしょ？」
+:::
+
+::: voice-father
+お父さん「そうだね。とりあえずlibrary(ggplot2)、library(cifmodeling)って打って。ヒストグラムとKaplan-Meier曲線を教えるよ」
+:::
+
+::: voice-daughter
+私「とりあえず思考停止で打つわ」
+:::
+
+::: voice-father
+お父さん「教えてあげてるんだから思考停止しない。Rの機能を追加するとき、install.packages()とlibrary()を使う。ざっくりいうとね、それぞれ、"Rパッケージをパソコンにインストールする"コマンドと、"インストール済みのパッケージを使えるようにする"コマンドなんだ」
+:::
+
+::: voice-daughter
+私「ふむふむ。じゃあ、install.packages("cifmodeling")の方は、一度やったら、それで終わり？」
+:::
+
+::: voice-father
+お父さん「基本的にはそう。同じパソコンなら、インストールは原則1回でOK。たとえば、install.packages("ggplot2")は、CRANっていうパッケージの倉庫から、自分のパソコンにダウンロードする。library(ggplot2)は、ggplot2を取り出して、"これからグラフを描くからこの道具を使います"ってRに宣言する」
+:::
+
+::: voice-daughter
+私「なるほど。やっとスッキリした。今まで毎回インストールしなきゃいけないのかなって思ってた」
+:::
+
+::: voice-father
+お父さん「毎回インストールすると、"コーヒー淹れるたびに豆を買いに行く"ようなものだからね。豆はまとめて買っておいて、飲むときに挽けばいい。パッケージも同じだよ」
+:::
+::::::::::::::::::::::::::::::::::::
+
+::: {.callout-note title="シミュレーションデータの生成"}
+ここでは、Rを使って簡単なシミュレーションデータを作り、連続データ・2値データ・生存時間データそれぞれについて、代表的な解析のデモをします。題材は「ストーマ保有者と非保有者の2群比較」です。
+
+-   年齢：正規分布（rnorm）から生成した連続データ
+
+-   性別・ストーマ保有：2項分布（rbinom関数）から生成した2値データ
 
 -   生存時間：指数分布（rexp関数）から生成した生存時間データ
 
@@ -220,204 +167,138 @@ set.seed(46)
 
 n <- 200
 
-## --- ベースラインの属性 ---------------------------------
-
 # ストーマ保有あり(1)/なし(0)
+
 stoma <- rbinom(n, size = 1, prob = 0.4)
 
 # 性別 0 = 女性, 1 = 男性
+
 sex <- rbinom(n, size = 1, prob = 0.5)
 
 # 年齢：正規分布から生成（ストーマあり群を少し高齢に）
+
 age <- rnorm(n, mean = 65 + 3 * stoma, sd = 8)
 
-## --- 再発・死亡・打ち切りの「潜在的な」発生時間を指数分布から生成 ----
-#   ・ストーマあり群の方が、再発・死亡ともやや起こりやすい設定にしています
+# 生存時間：指数分布（ストーマあり群の予後の期待値10年、ストーマなし群の予後の期待値15年）
 
-lambda_rec   <- ifelse(stoma == 1, 0.20, 0.12)  # 再発のrate（大きいほど早く起こる）
-lambda_death <- ifelse(stoma == 1, 0.10, 0.07)  # 死亡のrate
-lambda_cens  <- 0.05                             # 打ち切りのrate（群に依存しない）
+rate  <- ifelse(stoma == 1, 1 / 10, 1 / 15)
+time  <- rexp(n, rate = rate)
 
-t_rec   <- rexp(n, rate = lambda_rec)    # 再発までの潜在時間
-t_death <- rexp(n, rate = lambda_death)  # 死亡までの潜在時間
-t_cens  <- rexp(n, rate = lambda_cens)   # 打ち切りまでの潜在時間
+# ランダムな打ち切り（0 = 打ち切り, 1 = イベント）
 
-## --- 全生存期間（Overall Survival; OS） -------------------
-# イベント：死亡のみ（再発の有無は問わない）
-
-time_os   <- pmin(t_death, t_cens)
-status_os <- as.integer(t_death <= t_cens)  # 1 = 死亡, 0 = 打ち切り
-
-
-## --- 無病生存期間（Disease-Free Survival; DFS） ----------
-# イベント：再発 or 死亡（最初に起こった方）
-# （ここでは2次がんは考えず、「再発 or 死亡」をDFSイベントとみなします）
-
-time_dfs <- pmin(t_rec, t_death, t_cens)
-
-status_dfs <- integer(n)
-status_dfs[time_dfs == t_rec   & time_dfs < t_cens] <- 1L  # 再発
-status_dfs[time_dfs == t_death & time_dfs < t_cens] <- 1L  # 死亡
-# time_dfs == t_cens の場合は 0（打ち切り）のまま
-
-
-## --- 無再発期間（Recurrence-Free Interval） + 競合リスク ----
-# イベント1: 再発
-# イベント2: 再発を経験しない死亡
-# 0: 打ち切り
-# → 再発を主なアウトカムとして、死亡を競合リスクとして扱う
-
-time_rft <- pmin(t_rec, t_death, t_cens)
-
-event_rft <- integer(n)
-event_rft[time_rft == t_rec   & time_rft < t_cens] <- 1L  # イベント1: 再発
-event_rft[time_rft == t_death & time_rft < t_cens] <- 2L  # イベント2: 競合リスクとしての死亡
-# time_rft == t_cens の場合は 0（打ち切り）のまま
-
-
-## --- データフレームにまとめる --------------------------------
+status <- rbinom(n, size = 1, prob = 0.9)
 
 dat <- data.frame(
-  age        = age,
-  sex        = factor(sex, levels = c(0, 1), labels = c("WOMAN", "MAN")),
-  stoma      = factor(stoma, levels = c(0, 1),
-                      labels = c("WITHOUT STOMA", "WITH STOMA")),
-  time_os    = time_os,
-  status_os  = status_os,
-  time_dfs   = time_dfs,
-  status_dfs = status_dfs,
-  time_rft   = time_rft,
-  event_rft  = event_rft
+age   = age,
+sex   = factor(sex, levels = c(0, 1), labels = c("WOMAN", "MAN")),
+stoma = factor(stoma, levels = c(0, 1), labels = c("WITHOUT STOMA", "WITH STOMA")),
+time  = time,
+status = status
 )
 
 head(dat)
 ```
 :::
 
-::: {.callout-note title="全生存期間（OS）のKaplan–Meier曲線"}
-まず、`ggplot2`パッケージの`ggplot()`と、`table()`を使って、ストーマあり群とストーマなし群のデータを**ヒストグラム**と**分割表**で記述しています。
+::: {.callout-note title="連続データと2値データの要約"}
+
+まず、`ggplot2`パッケージの`ggplot()`と、`table()`を使って、ストーマあり群とストーマなし群のデータを**ヒストグラム**と**分割表**で記述しています。シミュレーションの設定を踏まえると、ヒストグラムでは、ストーマありとなしの間で、年齢の分布がずれているはずです。
+
+```{r}
+library(ggplot2)
+
+ggplot(dat, aes(x = age, fill = stoma)) +
+geom_histogram(alpha = 0.5, position = "identity", bins = 20) +
+labs(x = "AGE", y = "FREQUENCY", fill = "STOMA") +
+theme_minimal()
+
+table(STOMA = dat$stoma, SEX = dat$sex)
+```
+:::
+
+::: {.callout-note title="生存曲線による生存時間データの要約"}
+
+次の生存時間データでは、`cifmodeling`パッケージの`cifplot()`を使って、**Kaplan–Meier曲線**を描いてみます。ストーマあり群より、ストーマなし群の方が、生存曲線が高くなる（生存期間が長くなる）はずです。
 
 ```{r}
 library(cifmodeling)
 
-fit_os <- cifcurve(
-Event(time_os, status_os) ~ stoma,
-data         = dat,
-outcome.type = "survival"   # 単一イベントの生存時間データ
-)
-
-plot_os <- cifplot(fit_os)
-plot_os
+survival_curve <- cifcurve(Event(time, status) ~ stoma,data = dat, outcome.type = "survival")
+cifplot(survival_curve)
 ```
-:::
-
-::: {.callout-note title="無病生存期間（DFS）のKaplan–Meier曲線"}
-
-```{r}
-fit_dfs <- cifcurve(
-Event(time_dfs, status_dfs) ~ stoma,
-data         = dat,
-outcome.type = "survival"   # 「再発 or 死亡」を1イベントとして扱う
-)
-
-plot_dfs <- cifplot(fit_dfs)
-plot_dfs
-```
-:::
-
-::: {.callout-note title="無再発期間（RFT）のAalen-Johansen曲線の違い"}
-次の生存時間データでは、`cifmodeling`パッケージの`cifplot()`を使って、**Kaplan–Meier生存曲線**を描いてみます。
-
-```{r}
-library(cifmodeling)
-# 3. 無再発期間の競合リスク解析（Aalen–Johansen CIF）
-# Event(time_rft, event_rft) で、
-#   1 = 再発（interest）
-#   2 = 再発を経験しない死亡（競合リスク）
-#   0 = 打ち切り
-
-fit_cr <- cifcurve(
-  Event(time_rft, event_rft) ~ stoma,
-  data         = dat,
-  outcome.type = "competing-risk"
-)
-
-plot_cr <- cifplot(fit_cr)  # デフォルトでCIF（riskスケール）を描画
-plot_cr
-```
-:::
-
-::: {.callout-note title="臨床エンドポイントと代替エンドポイント"}
-OSとDFSは、特に術後補助化学療法の有効性を評価するときに用いられるアウトカム （エンドポイントともいいます）です。それでは両者は、どのような考え方で使い分けられているのでしょうか。指針の1つになっているのが、医薬品の承認審査の考え方です。たとえば抗悪性腫瘍薬の臨床評価方法に関するガイドライン（厚生労働省2021）では、抗がん剤を承認するためには、生存期間の延長などにもとづき、確実な有効性を示す必要があると述べています。そのため、OSを臨床エンドポイントとみなして、こちらが重視されます。 米国国立衛生研究所（NIH）は、エンドポイントを以下の3つに分類しています（Biomarkers Definitions Working Group 2001）。
-
--   バイオマーカー （biological marker or biomarker） 正常な生物学的プロセス、病態形成プロセスあるいは治療的介入に対する薬理学的反応の指標として客観的に測定および評価されるある特性
--   臨床エンドポイント（clinical endpoint） 患者がどのように感じ、あるいは機能し、どのくらい生存しているかを反映する特性あるいは変数
--   代替エンドポイント（surrogate endpoint） バイオマーカーのうち、臨床エンドポイントの代わりになることが意図されたもので、疫学、治療学、病態生理学または他の科学的根拠にもとづき、臨床上の便益・害の有無を予測することが期待されるもの
-
-致死的疾患のための医薬品開発では、代替エンドポイントを用いた臨床試験の結果をもとに承認審査が行われ、臨床エンドポイントによる有効性・安全性の評価は承認後になされることが国際的に許されています。たとえば米国食品医薬品局（FDA）の加速承認制度（Accelerated Approval）には、代替エンドポイントの利用条件などが規定されています。 加速承認制度は、AIDS問題に端を発して、90年代に緊急性の高い医薬品を早期開発するために導入されました。
-
-術後補助化学療法としての抗がん剤の有効性を評価する臨床試験では、DFSを代替エンドポイントとして採用することがありますが、その最大のメリットは試験期間が短くなることです。ただし、過去の承認審査では、代替エンドポイントの利用が誤った医薬品評価につながったケースが数多く報告されています（Fleming and Demets 1996）。たとえば、進行大腸がんにおける5FU+ロイコボリン併用療法は、臨床試験で腫瘍縮小がみられたにもかかわらず、臨床エンドポイントであるOSを評価すると、ほとんど延命効果がないことが明らかになりました（Fleming and Demets 1996）。
 :::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
-2009～2014年にFDAによって承認されたがん領域の医薬品は、83品目あったそうです。奏効率（腫瘍縮小や完全寛解）がエンドポイントの臨床試験を根拠として承認されたのは、83品目のうち何割だったか、正しいものを選びなさい。
+奏効率（response rate）とは、抗がん剤による治療を行った結果、何割の患者で腫瘍が縮小したか（完全奏効または部分奏効を達成したか）や血液から腫瘍細胞が消えたか（完全寛解）を表す指標です。この用語は広く用いられていますが、Japan Clinical Oncology Group（JCOG）では奏効割合（response proportion）という表現を好んでいます（Japan Clinical Oncology Group 2021）。
 
-1.  0～24%
-2.  25～49%
-3.  50～74%
-4.  75～100%
+さて、次の指標のうち、率（rate）に該当するのはどれでしょうか。
+
+1.  打率
+2.  男女比率
+3.  有病率
+4.  死亡率
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は2です。**
+-   **正解は4です。**
 
-Kim and Prasad（2016）の総説論文によると、奏効率の結果に基づいて承認されたのは83品目のうち31品目と報告されています。また、エンドポイントの内訳は通常承認と加速承認では異なります。通常承認では、品目55品目のうち48品目が全生存期間、無増悪生存期間、無病生存期間で評価されたのに対し、加速承認では、奏効率を主要エンドポイントとする第II相試験の結果を根拠にした品目が大多数でした。
+割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m2です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、①100%を超えない、②人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
+
+「打率」は安打数÷打数であり、「割合」になります。
+
+「男女比率」は男性の人数÷女性の人数であり、「比」になります。
+
+「有病率」は疾患を有する人の人数÷全体の人数であり、「割合」になります。
+
+「死亡率」は死亡件数÷観察人年であり、「率」になります。
 :::
 
 ### Continuation of their story
 
-[Study design I](study-design-1.md)
+[Study design I](study-design-1.qmd)
 
-[Study design II](study-design-2.md)
+[Study design II](study-design-2.qmd)
 
-[Study design III](study-design-3.md)
+[Study design III](study-design-3.qmd)
 
-[Study design IV](study-design-4.md)
+[Study design III](study-design-4.qmd)
 
-[Clinical trial I](clinical-trial-1.md)
+[Study design IV](study-design-5.qmd)
 
-[Clinical trial II](clinical-trial-2.md)
+[Clinical trial I](clinical-trial-1.qmd)
 
-[Clinical trial III](clinical-trial-3.md)
+[Clinical trial II](clinical-trial-2.qmd)
 
-[Epidemiology I](epidemiology-1.md)
+[Clinical trial III](clinical-trial-3.qmd)
 
-[Epidemiology II](epidemiology-2.md)
+[Epidemiology I](epidemiology-1.qmd)
 
-[Epidemiology III](epidemiology-3.md)
+[Epidemiology II](epidemiology-2.qmd)
 
-[Epidemiology IV](epidemiology-4.md)
+[Epidemiology III](epidemiology-3.qmd)
 
-[Regression I](logistic-regression-1.md)
+[Epidemiology IV](epidemiology-4.qmd)
 
-[Regression II](logistic-regression-2.md)
+[Regression I](logistic-regression-1.qmd)
 
-[Regression III](logistic-regression-3.md)
+[Regression II](logistic-regression-2.qmd)
 
-[Regression IV](logistic-regression-4.md)
+[Regression III](logistic-regression-3.qmd)
 
-[Causal inference I](causal-inference-1.md)
+[Regression IV](logistic-regression-4.qmd)
 
-[Causal inference II](causal-inference-2.md)
+[Causal inference I](causal-inference-1.qmd)
 
-[Causal inference III](causal-inference-3.md)
+[Causal inference II](causal-inference-2.qmd)
 
-[Causal inference IV](causal-inference-4.md)
+[Causal inference III](causal-inference-3.qmd)
 
-[Publish a paper I](publish-a-paper-1.md)
+[Causal inference IV](causal-inference-4.qmd)
 
-[Publish a paper II](publish-a-paper-2.md)
+[Publish a paper I](publish-a-paper-1.qmd)
 
-[Publish a paper III](publish-a-paper-3.md)
+[Publish a paper II](publish-a-paper-2.qmd)
 
-[Publish a paper IV](publish-a-paper-4.md)
+[Publish a paper III](publish-a-paper-3.qmd)
+
+[Publish a paper IV](publish-a-paper-4.qmd)
