--- a/jp/causal-inference-1.qmd
+++ b/jp/causal-inference-1.qmd
@@ -246,9 +246,9 @@ a:hover {
 
 [Study design III](study-design-3.qmd)
 
-[Study design III](study-design-4.qmd)
+[Study design IV](study-design-4.qmd)
 
-[Study design IV](study-design-5.qmd)
+[Study design V](study-design-5.qmd)
 
 [Clinical trial I](clinical-trial-1.qmd)
 
