--- a/jp/causal-inference-3.qmd
+++ b/jp/causal-inference-3.qmd
@@ -318,9 +318,9 @@ Cで条件付けたとき、つまりCを特定の値に固定すると、なに
 
 [Study design III](study-design-3.qmd)
 
-[Study design III](study-design-4.qmd)
+[[Study design IV](study-design-4.qmd)
 
-[Study design IV](study-design-5.qmd)
+[Study design V](study-design-5.qmd)
 
 [Clinical trial I](clinical-trial-1.qmd)
 
