--- a/jp/publish-a-paper-2.qmd
+++ b/jp/publish-a-paper-2.qmd
@@ -346,9 +346,9 @@ Ministry of Education, Ministry of Health, Labour and Welfare, Ministry of Econo
 
 [Study design III](study-design-3.qmd)
 
-[Study design III](study-design-4.qmd)
+[Study design IV](study-design-4.qmd)
 
-[Study design IV](study-design-5.qmd)
+[Study design V](study-design-5.qmd)
 
 [Clinical trial I](clinical-trial-1.qmd)
 
