Study design III to V

--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -154,11 +154,11 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「数字には違いないんだけどね。統計解析では、データの型がとても大事なんだ。代表的なのは、連続データ、2値データ、計数データ、生存時間データの4つ」
+お父さん「数字には違いないんだけどね。統計解析では、データの型がとても大事なんだ。代表的なのは、連続データ、2値データなどの分類データ、計数データ、生存時間データの4つ」
 :::
 
 ::: voice-daughter
-私「連続データって、年齢とか血圧みたいな測るやつでしょ？2値データもわかるよ。私が比較したいストーマ保有ありとなしとか」
+私「連続データって、年齢とか血圧みたいな測るやつでしょ？2値データもわかるよ。私の調査で比較したいストーマ保有あり・なしとか」
 :::
 
 ::: voice-father
