--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -150,65 +150,135 @@ a:hover {
 
 ### 調査項目とデータの型
 
-**私「聞いていいかな、お父さん。がんサバイバーの復職率を調査する話があったでしょ。患者さんに送る調査票をつくってみたんだけど、見てくれる？」**
+::: voice-daughter
+私「聞いていいかな、お父さん。がんサバイバーの復職率を調査する話があったでしょ。患者さんに送る調査票をつくってみたんだけど、見てくれる？」
+:::
 
+::: voice-father
 お父さん「どれどれ」
+:::
+
 
 ![](study-design-4-1.png)
 
+
+::: voice-father
 お父さん「復職率の定義はなに？」
+:::
 
-**私「どういうこと？」**
+::: voice-daughter
+私「どういうこと？」
+:::
 
+::: voice-father
 お父さん「調査票を見ただけじゃ、この質問項目で十分かどうかわからないってこと。手術日から調査日の間に、復職を希望した患者さんが、希望どおり復職できたかどうかを調べたいのかな？」
+:::
 
-**私「それもいいんだけど、復職を希望してないって回答した患者さんのなかに、会社の方針などの理由で復職をあきらめた患者さんも含まれるかもしれない。だから、復職率を計算するとき、分母は、復職を希望した患者さんじゃなくて、手術を受けた患者さん全員にしたいわ。そうした方が、就労実態がわかりやすそうだもの」**
+::: voice-daughter
+私「それもいいんだけど、復職を希望してないって回答した患者さんのなかに、会社の方針などの理由で復職をあきらめた患者さんも含まれるかもしれない。だから、復職率を計算するとき、分母は、復職を希望した患者さんじゃなくて、手術を受けた患者さん全員にしたいわ。そうした方が、就労実態がわかりやすそうだもの」
+:::
 
+::: voice-father
 お父さん「手術日から調査日の間の復職を調べたいかどうかについては？」
+:::
 
-**私「えーっと。調査票に回答してもらうタイミングは患者さんによってまちまちになりそうだから、調査日は使いたくない。1年以内に復職できるかを定義にするのはどうかな？あ！ 復職日を答えてもらえばいいのかも！」**
+::: voice-daughter
+私「えーっと。調査票に回答してもらうタイミングは患者さんによってまちまちになりそうだから、調査日は使いたくない。1年以内に復職できるかを定義にするのはどうかな？あ！ 復職日を答えてもらえばいいのかも！」
+:::
 
+::: voice-father
 お父さん「復職日はあった方がいいよね。そうすると、復職状況から解析用の“変数”をつくるには、分類データと生存時間データの2通りが考えられる。それはさておき、手術後に亡くなった場合はどうするの？」
+:::
 
-**私「入院中に亡くなった場合は、調査対象に含めない。でも、術後再発による死亡を分母から除外するのは変な気がする」** お父さん「そうだね。除外するとバイアスが生じると思う。がん患者さんを追跡するような臨床研究では、大切なことが3つある。1つ、どのタイミングを時間原点 （time origin）にするかを決める必要があるよね。この場合、時間原点は退院日にするといい。2つ、追跡期間の目標を設定して、その時点までは、可能な限り情報を収集すること。 情報が取れないとバイアスが生じる原因になる。3つ、時間原点後の死亡は除外してはならない」
+::: voice-daughter
+私「入院中に亡くなった場合は、調査対象に含めない。でも、術後再発による死亡を分母から除外するのは変な気がする」
+:::
 
-**私「後からバイアスがあるとか言われたくないもんね。ふむふむ」**
+::: voice-father
+お父さん「そうだね。除外するとバイアスが生じると思う。がん患者さんを追跡するような臨床研究では、大切なことが3つある。1つ、どのタイミングを時間原点 （time origin）にするかを決める必要があるよね。この場合、時間原点は退院日にするといい。2つ、追跡期間の目標を設定して、その時点までは、可能な限り情報を収集すること。 情報が取れないとバイアスが生じる原因になる。3つ、時間原点後の死亡は除外してはならない」
+:::
 
+::: voice-daughter
+私「後からバイアスがあるとか言われたくないもんね。ふむふむ」
+:::
+
+::: voice-father
 お父さん「以前、“PECO”という要素を使って臨床疑問を構造化したらってアドバイスしたよね。Pが根治切除後の直腸がん患者さんだったら、その集団をもれなく調査しないといけない」
+:::
 
-**私「分類データと生存時間データってなに？」**
+::: voice-daughter
+私「分類データと生存時間データってなに？」
+:::
 
-お父さん「統計解析を行ううえで基本になるのが“データの型”で、分類データと生存時間データはその種類だよ。調査票を少し手直ししたから、これを使って解説しよう」
+::: voice-father
+お父さん「これもこの前話したでしょ。統計解析を行ううえで基本になるのが“データの型”で、分類データと生存時間データはその種類だよ」
+:::
+
+::: voice-daughter
+私「いや、先週の話だし、私忙しいし」
+:::
+
+::: voice-father
+お父さん「調査票を少し手直ししたから、これを使ってもう一度話すよ」
+:::
 
 ![](study-design-4-2.png)
 
-お父さん「分類データは、この場合、患者のアウトカムを分類したものだよ。1年以内に復職したかどうかをアウトカムにしたらどうかなって言ってたよね」
+::: voice-father
+お父さん「分類データは、この場合、患者のアウトカムを分類したものだよ。1年以内に復職したかどうかをアウトカムにしたらどうかなっていってたよね」
+:::
 
-**私「うん」**
+::: voice-daughter
+私「うん」
+:::
 
+::: voice-father
 お父さん「たとえば、“1年以内に復職あり”を分類1、“1年以内に復職なし”を分類2にしたら、2値データと呼ばれる分類データの一種になる。これは調査票から調べられるし、復職率も計算できるよね」
+:::
 
-**私「うん。1年以内の死亡を復職なしって扱えばね」**
+::: voice-daughter
+私「うん。1年以内の死亡を復職なしって扱えばね」
+:::
 
+::: voice-father
 お父さん「でも就労状況を集計するときは2値データではなく、3カテゴリの分類データの方がいい。“1年以内に復職あり”を分類1、“1年以内に復職なし（死亡以外の理由のため）”を分類2、“1年以内に復職なし（死亡のため）”を分類3にしたらどう？もっと詳細にアウトカムが把握できるでしょ」
+:::
 
-**私「うんうん。じゃあ生存時間データってなに？OS（全生存期間）ってこと？」**
+::: voice-daughter
+私「うんうん。じゃあ生存時間データはなんだっけ？OS（全生存期間）ってこと？」
+:::
 
+::: voice-father
 お父さん「たしかにOSは生存時間データの一種だよ。名前から誤解されがちだけど、それ以外にもあるんだ。生存時間データがどういうものかっていうと、時間原点から“イベント”までにかかった時間を表す変数のこと」
+:::
 
-**私「復職状況も生存時間データになるの？」**
+::: voice-daughter
+私「復職状況も生存時間データになるの？」
+:::
 
+::: voice-father
 お父さん「そうすることもできる。この場合は、“退院日から復職日までの期間”を考えればいい。たとえばね、4月1日に退院して、4月30日に復職したとしたら、この患者の生存時間データは30-1+1=30日になる。これだとただの日数だから、連続データとの違いがはっきりしないけど、生存時間データのポイントは、打ち切り （censoring）があることなんだ。調査日までに復職しなかった場合、退院日から復職日までの期間は存在しないでしょ」
+:::
 
-**私「まあそうだけど、それでいいんじゃないの？」**
+::: voice-daughter
+私「まあそうだけど、それでいいんじゃないの？」
+:::
 
+::: voice-father
 お父さん「統計解析のソフトウェアを使うとき一工夫が必要で、調査日までに復職しなかったという情報を、入力してあげなければならない。だから生存時間データは、“時間変数”と“打ち切り変数”という2つの変数が組になっているんだ。打ち切り変数は、“イベントが観察された”、“イベントが観察される前に打ち切りになった”を表す2値データ。時間変数は、この場合は“退院日から復職日までの期間”か“退院日から調査日までの期間”のどちらかになる」
+:::
 
-**私「えーっと、打ち切り変数は2値データってことは、すべての患者さんで復職か、打ち切りかの2択しかないってこと？死亡はどうなるの？」**
+::: voice-daughter
+私「えーっと、打ち切り変数は2値データってことは、すべての患者さんで復職か、打ち切りかの2択しかないってこと？死亡はどうなるの？」
+:::
 
+::: voice-father
 お父さん「いま話したような扱いをするなら、死亡した患者さんは、打ち切りという分類に含まれることになる。ただし、競合リスク （competing risk）という別の扱い方もある。簡単に言うと、それが起こると研究で調べたいイベント（たとえば死亡や復職）が観察されなくなる、競合するイベントのことだよ。競合リスクを考慮すると、打ち切り変数は、“イベントが観察された”、“イベントが観察される前に競合リスクが生じた”、“イベントが観察される前に打ち切りになった”という3カテゴリになる」
+:::
 
-**私「だいたいわかった。この調査票、使わせてもらうね」**
+::: voice-daughter
+私「だいたいわかった。この調査票、使わせてもらうね」
+:::
 
 ::: callout-note
 <img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **統計手法を選ぶときの3つのポイント**
@@ -238,9 +308,9 @@ a:hover {
 | 計数データ | なし | なし | $\chi^2$検定 | 発生率の比較 |
 |  | なし | あり | Poisson回帰 | 回帰モデルの一種 |
 |  | あり | あり | 変量効果モデル、一般化推定方程式 | 回帰モデルの一種 |
-| 生存時間データ | なし | なし | ログランク検定 | 生存曲線の比較 |
+| 生存時間データ | なし | なし | Kaplan-Meier曲線 | 生存曲線の記述 |
 |  | なし | あり | Cox回帰 | 回帰モデルの一種 |
-| 競合リスクデータ | なし | なし | Gray検定 | 累積発生率曲線の比較 |
+| 競合リスクデータ | なし | なし | Aalen-Johansen曲線 | 累積発生率曲線の記述 |
 |  | なし | あり | Fine-Grayモデル | 回帰モデルの一種 |
 :::
 
@@ -252,12 +322,14 @@ a:hover {
 2.  健常人集団における検査値の95%が含まれる範囲
 3.  健常人集団における検査値の平均±1.96×標準誤差
 4.  ある集団からのランダムサンプルにおいて検査値の95%が含まれる範囲
+
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
 -   **正解は2です。**
 
 標準偏差（SD）と標準誤差（SE）の区別が重要です。前者は「検査値自体が個人間でどのくらいばらつくか」を、後者は「平均の推定がどのくらい精確か」を表しています。そして、「平均±1.96×標準偏差」は、正規分布における「95%が含まれる範囲」に相当しています。
+
 :::
 
 ### Continuation of their story
