--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -164,7 +164,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「再発までの日数だったら無再発期間(relapse-free time)って言葉を選ぶかなあ」
+お父さん「再発までの日数だったら無再発期間(relapse-free time)とかって言葉を選ぶかなあ。累積再発率（cumulative incidence of relapse）やCIRって呼ぶことの方が多いけど」
 :::
 
 ::: voice-daughter
@@ -172,7 +172,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「学術的には違うよ。再発を経験せずに、死亡することもあるでしょ。無病生存期間のポイントは、再発・2次がん・死亡のうち、**どれか最初のイベントまでの時間**を扱うこと。だから、再発だけでなく、死亡したり別のがんを発症したりしたときも、イベントとして扱われるんだ」
+お父さん「専門的には違うよ。再発を経験せずに、死亡することもあるでしょ。無病生存期間のポイントは、再発・2次がん・死亡のうち、**どれか最初のイベントまでの時間**を扱うこと。だから、再発だけでなく、死亡したり別のがんを発症したりしたときも、イベントとして扱われるんだ」
 :::
 
 ![](study-design-2.png)
@@ -182,7 +182,15 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「生存時間データは、一般に特定のイベントまでの経過時間なんだ。端的にいうとね、無病生存期間のデータから“3年無病生存確率”を計算するとするでしょ。それは“イベントが起こらない確率”に相当するんだけど、意味合いとしては3年時点で、再発も2次がんも経験せず、生存できる確率を求めることになる」 **私「そういうことか」** お父さん「薬の臨床試験で用いられるアウトカムは、”エンドポイント”とよばれることもあるね。表に、がん臨床試験の主な生存時間エンドポイントを整理してあげるよ（Japan Clinical Oncology Group 2021）」
+お父さん「生存時間データは、一般に特定のイベントまでの経過時間なんだ。端的にいうとね、無病生存期間のデータから“3年無病生存確率”を計算するとするでしょ。それは“イベントが起こらない確率”に相当するんだけど、意味合いとしては3年時点で、再発も2次がんも経験せず、生存できる確率を求めることになる」
+:::
+
+::: voice-daughter
+私「そういうことか」
+:::
+
+::: voice-father
+お父さん「薬の臨床試験で用いられるアウトカムは、”エンドポイント”とよばれることもあるね。表に、がん臨床試験の主な生存時間エンドポイントを整理してあげるよ（Japan Clinical Oncology Group 2021）」
 :::
 
 | エンドポイント | イベント1 | イベント2 | イベント3 | イベント4 | 打ち切り日 |
@@ -213,18 +221,17 @@ a:hover {
 
 
 ::: {.callout-note title="シミュレーションデータ（再発あり）の生成"}
-前回の発展形として、シミュレーションデータを使って、全生存期間・無再発生存期間・無再発期間の違いをみてみましょう。 無再発期間の解析では、再発の前に死亡した患者の扱いが問題になります。これを競合リスク（competing risk）といいます。 死亡だけではなく再発を伴った生存時間データをRで生成します。全生存期間のイベントは「死亡」、全再発生存期間のイベントは「死亡と再発」です。無再発期間のイベントは「再発」ですが、死亡を競合リスクとして扱います。前回、競合リスクのない生存時間データを要約しましたが、そこで用いたのはKaplan-Meier曲線でしたよね。それに対して、競合リスクデータの解析では、Kaplan-Meier曲線ではなく、Aalen-Johansen曲線を用いるのが正式です。
+前回の発展形として、シミュレーションデータを使って、全生存期間（OS）・無再発生存期間（RFS）・累積再発率（CIR）の違いをみてみましょう。 CIRの解析では、再発の前に死亡した患者が存在するため、その扱いを決める必要があります。これを競合リスク（competing risk）といいます。
+
+以下のコードでは、死亡だけではなく再発を伴った生存時間アウトカム3種類をRで生成しています。OSのイベントは「死亡」、RFSのイベントは「死亡と再発」です。CIRのイベントは「再発」ですが、死亡を競合リスクとして扱います。前回、競合リスクのない生存時間データを要約しましたが、そこで用いたのはKaplan-Meier曲線でしたよね。それに対して、競合リスクデータの解析では、Kaplan-Meier曲線ではなく、Aalen-Johansen曲線を用いるのが正式です。
 
 -   ストーマ保有：2項分布（rbinom関数）から生成した2値データ
 
--   生存時間：指数分布（rexp関数）から生成した生存時間データ
+-   生存時間：指数分布（rexp関数）から生成した生存時間データ（t_relapse, t_death, t_censoringの乱数から計算）
 
 ```{r}
 set.seed(46)
-
 n <- 200
-
-## --- ベースラインの属性 ---------------------------------
 
 # ストーマ保有あり(1)/なし(0)
 stoma <- rbinom(n, size = 1, prob = 0.4)
@@ -235,49 +242,37 @@ sex <- rbinom(n, size = 1, prob = 0.5)
 # 年齢：正規分布から生成（ストーマあり群を少し高齢に）
 age <- rnorm(n, mean = 65 + 3 * stoma, sd = 8)
 
-## --- 再発・死亡・打ち切りの「潜在的な」発生時間を指数分布から生成 ----
-#   ・ストーマあり群の方が、再発・死亡ともやや起こりやすい設定にしています
+hazard_relapse   <- ifelse(stoma == 1, 0.20, 0.12)  # 再発ハザード（大きいほど早く起こる）
+hazard_death     <- ifelse(stoma == 1, 0.10, 0.07)  # 死亡ハザード
+hazard_censoring <- 0.05                            # 打ち切りハザード（群に依存しない）
 
-lambda_rec   <- ifelse(stoma == 1, 0.20, 0.12)  # 再発のrate（大きいほど早く起こる）
-lambda_death <- ifelse(stoma == 1, 0.10, 0.07)  # 死亡のrate
-lambda_cens  <- 0.05                             # 打ち切りのrate（群に依存しない）
+t_relapse   <- rexp(n, rate = hazard_relapse)   # 再発までの潜在時間
+t_death     <- rexp(n, rate = hazard_death)     # 死亡までの潜在時間
+t_censoring <- rexp(n, rate = hazard_censoring) # 打ち切りまでの潜在時間
 
-t_rec   <- rexp(n, rate = lambda_rec)    # 再発までの潜在時間
-t_death <- rexp(n, rate = lambda_death)  # 死亡までの潜在時間
-t_cens  <- rexp(n, rate = lambda_cens)   # 打ち切りまでの潜在時間
+## --- 全生存期間（OS） -------------------
 
-## --- 全生存期間（Overall Survival; OS） -------------------
-# イベント：死亡のみ（再発の有無は問わない）
+time_os   <- pmin(t_death, t_censoring)
+status_os <- as.integer(t_death <= t_censoring)  # 1 = 死亡, 0 = 打ち切り
 
-time_os   <- pmin(t_death, t_cens)
-status_os <- as.integer(t_death <= t_cens)  # 1 = 死亡, 0 = 打ち切り
+## --- 無再発存期間（RFS） ----------
 
+time_rfs <- pmin(t_relapse, t_death, t_censoring)
 
-## --- 無病生存期間（Disease-Free Survival; DFS） ----------
-# イベント：再発 or 死亡（最初に起こった方）
-# （ここでは2次がんは考えず、「再発 or 死亡」をDFSイベントとみなします）
+status_rfs <- integer(n)
+status_rfs[time_rfs == t_relapse & time_rfs < t_censoring] <- 1 # 再発
+status_rfs[time_rfs == t_death & time_rfs < t_censoring] <- 1   # 死亡
 
-time_dfs <- pmin(t_rec, t_death, t_cens)
-
-status_dfs <- integer(n)
-status_dfs[time_dfs == t_rec   & time_dfs < t_cens] <- 1L  # 再発
-status_dfs[time_dfs == t_death & time_dfs < t_cens] <- 1L  # 死亡
-# time_dfs == t_cens の場合は 0（打ち切り）のまま
-
-
-## --- 無再発期間（Recurrence-Free Interval） + 競合リスク ----
+## --- 累積再発率（CIR） + 競合リスク ----
 # イベント1: 再発
 # イベント2: 再発を経験しない死亡
 # 0: 打ち切り
-# → 再発を主なアウトカムとして、死亡を競合リスクとして扱う
 
-time_rft <- pmin(t_rec, t_death, t_cens)
+time_cir <- pmin(t_relapse, t_death, t_censoring)
 
-event_rft <- integer(n)
-event_rft[time_rft == t_rec   & time_rft < t_cens] <- 1L  # イベント1: 再発
-event_rft[time_rft == t_death & time_rft < t_cens] <- 2L  # イベント2: 競合リスクとしての死亡
-# time_rft == t_cens の場合は 0（打ち切り）のまま
-
+status_cir <- integer(n)
+status_cir[time_cir == t_relapse & time_cir < t_censoring] <- 1 # イベント1: 再発
+status_cir[time_cir == t_death & time_cir < t_censoring] <- 2     # イベント2: 競合リスクとしての死亡
 
 ## --- データフレームにまとめる --------------------------------
 
@@ -288,10 +283,10 @@ dat <- data.frame(
                       labels = c("WITHOUT STOMA", "WITH STOMA")),
   time_os    = time_os,
   status_os  = status_os,
-  time_dfs   = time_dfs,
-  status_dfs = status_dfs,
-  time_rft   = time_rft,
-  event_rft  = event_rft
+  time_rfs   = time_rfs,
+  status_rfs = status_rfs,
+  time_cir   = time_cir,
+  status_cir = status_cir
 )
 
 head(dat)
@@ -299,60 +294,59 @@ head(dat)
 :::
 
 ::: {.callout-note title="全生存期間（OS）のKaplan–Meier曲線"}
-まず、`ggplot2`パッケージの`ggplot()`と、`table()`を使って、ストーマあり群とストーマなし群のデータを**ヒストグラム**と**分割表**で記述しています。
+OSとRFSは通常の生存時間データですから、前回と同様に、`cifmodeling`パッケージの`cifplot()`を使って、**Kaplan–Meier生存曲線**で記述します。
 
 ```{r}
 library(cifmodeling)
 
-fit_os <- cifcurve(
-Event(time_os, status_os) ~ stoma,
-data         = dat,
-outcome.type = "survival"   # 単一イベントの生存時間データ
-)
-
-plot_os <- cifplot(fit_os)
-plot_os
-```
-:::
-
-::: {.callout-note title="無病生存期間（DFS）のKaplan–Meier曲線"}
-
-```{r}
-fit_dfs <- cifcurve(
-Event(time_dfs, status_dfs) ~ stoma,
-data         = dat,
-outcome.type = "survival"   # 「再発 or 死亡」を1イベントとして扱う
-)
-
-plot_dfs <- cifplot(fit_dfs)
-plot_dfs
-```
-:::
-
-::: {.callout-note title="無再発期間（RFT）のAalen-Johansen曲線の違い"}
-次の生存時間データでは、`cifmodeling`パッケージの`cifplot()`を使って、**Kaplan–Meier生存曲線**を描いてみます。
-
-```{r}
-library(cifmodeling)
-# 3. 無再発期間の競合リスク解析（Aalen–Johansen CIF）
-# Event(time_rft, event_rft) で、
-#   1 = 再発（interest）
-#   2 = 再発を経験しない死亡（競合リスク）
-#   0 = 打ち切り
-
-fit_cr <- cifcurve(
-  Event(time_rft, event_rft) ~ stoma,
+cifplot(Event(time_os, status_os) ~ stoma,
   data         = dat,
-  outcome.type = "competing-risk"
+  outcome.type = "survival",
+  label.y      = "Overall survival"
 )
-
-plot_cr <- cifplot(fit_cr)  # デフォルトでCIF（riskスケール）を描画
-plot_cr
 ```
+:::
+
+::: {.callout-note title="無再発生存期間（RFS）のKaplan–Meier曲線"}
+
+```{r}
+cifplot(Event(time_rfs, status_rfs) ~ stoma,
+  data         = dat,
+  outcome.type = "survival",
+  label.y      = "Relapse-free survival"
+)
+```
+:::
+
+::: {.callout-note title="累積発生率（CIR）のAalen-Johansen曲線の違い"}
+以下のコードでは、`Event(time_cir, status_cir)`のコーディングによって競合リスクを入力しています。
+
+- `status_cir=1` : 関心のあるイベント（再発）
+- `status_cir=2` : 競合リスク（再発を経験しない死亡）
+- `status_cir=0` : 打ち切り
+
+さらに`outcome.type = "competing-risk"`を指定することで、**Aalen-Johansen曲線**を描いています。
+
+```{r}
+cifplot(Event(time_cir, status_cir) ~ stoma,
+  data         = dat,
+  outcome.type = "competing-risk",
+  label.y      = "Cumulative incidence of relapse"
+)
+```
+:::
+
+
+::: voice-daughter
+私「Aalen-Johansen曲線って、Kaplan–Meier曲線のY軸を逆さにしただけじゃないの」
+:::
+
+::: voice-father
+お父さん「違うよ。CIRの解析で、Kaplan–Meier推定量を計算することもできるよ。このとき、再発を経験しない死亡は、競合リスク（`status_cir=2`）ではなく打ち切り（`status_cir=0`）として入力することになる。でも本来なら、死亡は、追跡期間終了や追跡不能による打ち切りとは、違う転帰だよね。だから競合リスクとして扱うのが正しい。もちろん死亡と再発を両方イベントにしたRFSも正しいけど、RFS曲線の差は、再発だけでなく他因死の影響も反映しているよね。だからOS、RFS、CIRは使い分けることが必要になる」
 :::
 
 ::: {.callout-note title="臨床エンドポイントと代替エンドポイント"}
-OSとDFSは、特に術後補助化学療法の有効性を評価するときに用いられるアウトカム （エンドポイントともいいます）です。それでは両者は、どのような考え方で使い分けられているのでしょうか。指針の1つになっているのが、医薬品の承認審査の考え方です。たとえば抗悪性腫瘍薬の臨床評価方法に関するガイドライン（厚生労働省2021）では、抗がん剤を承認するためには、生存期間の延長などにもとづき、確実な有効性を示す必要があると述べています。そのため、OSを臨床エンドポイントとみなして、こちらが重視されます。 米国国立衛生研究所（NIH）は、エンドポイントを以下の3つに分類しています（Biomarkers Definitions Working Group 2001）。
+OS、DFS、RFSは、特に術後補助化学療法の有効性を評価するときに用いられるアウトカム（エンドポイントともいいます）です。それでは両者は、どのような考え方で使い分けられているのでしょうか。指針の1つになっているのが、医薬品の承認審査の考え方です。たとえば抗悪性腫瘍薬の臨床評価方法に関するガイドライン（厚生労働省2021）では、抗がん剤を承認するためには、生存期間の延長などにもとづき、確実な有効性を示す必要があると述べています。そのため、OSを臨床エンドポイントとみなして、こちらが重視されます。米国国立衛生研究所（NIH）は、エンドポイントを以下の3つに分類しています（Biomarkers Definitions Working Group 2001）。
 
 -   バイオマーカー （biological marker or biomarker） 正常な生物学的プロセス、病態形成プロセスあるいは治療的介入に対する薬理学的反応の指標として客観的に測定および評価されるある特性
 -   臨床エンドポイント（clinical endpoint） 患者がどのように感じ、あるいは機能し、どのくらい生存しているかを反映する特性あるいは変数
