--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -149,39 +149,81 @@ a:hover {
 
 ### 調査で気をつけておくべきバイアス
 
-**私「お父さん、ハード なエンドポイントとソフト なエンドポイントって言い回しがあるじゃない？」**
+::: voice-daughter
+私「お父さん、ハード なエンドポイントとソフト なエンドポイントって言い回しがあるじゃない？」
+:::
 
+::: voice-father
 お父さん「あるね」
+:::
 
-**私「臨床試験にあこがれてる先輩がいてね、復職状況はソフトなエンドポイントだからだめだ、OSはハードなエンドポイントだからいいんだ、みたいな言い方をするのよ。否定されてるみたいなんだけど、どういうことなのか、よくわかんなくて」**
+::: voice-daughter
+私「臨床試験にあこがれてる先輩がいてね、復職状況はソフトなエンドポイントだからだめだ、OSはハードなエンドポイントだからいいんだ、みたいな言い方をするのよ。否定されてるみたいなんだけど、どういうことなのか、よくわかんなくて」
+:::
 
+::: voice-father
 お父さん「確かにがん臨床試験はOSをエンドポイントにすることが多いけど、それを基準にダメ出しするのもどうかと思うけどね。それに、慣用的にハード・ソフトっていう表現が用いられるけど、その意味を正確に伝えるなら、客観的・主観的って言った方がいいんじゃないかな」
+:::
 
-**私「客観的？主観的？」**
+::: voice-daughter
+私「客観的？主観的？」
+:::
 
+::: voice-father
 お父さん「よくある議論を挙げると、OSはハード、PFS（無増悪生存期間）はソフトというのがある。OSは死亡日と最終生存確認日だけで決まるから、ハードなエンドポイント。PFSでは、死亡とがんの増悪がイベントとして定義されるんだけど、そうするとデータを集めるために増悪日の情報が必要になる。ところが臨床的には増悪がいつ起きたかは、主観的に判断されるケースがあるよね。全身状態や腫瘍マーカーが悪化したりするケースだね。臨床試験で、こういったケースをイベントとみなすかは議論がわかれるけど、こういった意味でPFSはソフトなエンドポイントって言われることがある」
+:::
 
-**私「なるほど、ハード=客観的、ソフト=主観的ってことね。たしかに、私の調査票はソフトなエンドポイントって言われるわけだ。そもそも患者さんの主観を尋ねたいんだもんね」**
+::: voice-daughter
+私「なるほど、ハード=客観的、ソフト=主観的ってことね。たしかに、私の調査票はソフトなエンドポイントって言われるわけだ。そもそも患者さんの主観を尋ねたいんだもんね」
+:::
 
+::: voice-father
 お父さん「まあ、その先輩が伝えたかったのは、復職状況を調べるうえで、できるだけあいまいな部分を排除して、客観的に測定しなさいってことじゃない？調査対象者が、退院後の就労日を正確に回答してくれるなら、十分に客観的な測定ができていると思うけどね」
+:::
 
-**私「じゃあさ、ハードなエンドポイントにはバイアスがない、ソフトなエンドポイントにはバイアスがあるって考えていい？」**
+::: voice-daughter
+私「じゃあさ、ハードなエンドポイントにはバイアスがない、ソフトなエンドポイントにはバイアスがあるって考えていい？」
+:::
 
+::: voice-father
 お父さん「主観が入るとバイアスが生じやすいとは言えるけど、そんなに単純じゃないかな。調査がいい加減だったら、死亡が完全に特定できず、死亡率を過小評価することだってあるもの」
+:::
 
-**私「じゃあ、私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」**
+::: voice-daughter
+私「それはわかるよ。死亡率を調査するって大変だもの」
+:::
 
+::: voice-father
+お父さん「そうそう。もっと具体的にいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる。これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく正確であるためには、打ち切りがランダムに起きてることが前提になってる」
+:::
+
+::: voice-daughter
+私「私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
+:::
+
+::: voice-father
 お父さん「調査票を郵送するんでしょ。そういうとき、回答してくれない患者が多いと偏りが生じやすいから、回答率を挙げる工夫をするといい。たとえば、調査票で年収って聞いてる？」
+:::
 
-**私「聞くかもしれない」**
+::: voice-daughter
+私「聞くかもしれない」
+:::
 
+::: voice-father
 お父さん「経済状況のようなナイーブな質問内容には十分配慮した方がいいよ。それが理由で回答してくれないと、解析対象集団が調査対象全体を代表していると言えなくなってしまう。他にはね、ストーマ非保有者よりストーマ保有者の方が、調査票への回答率が高くなっちゃうとか。そもそもストーマ非保有者とストーマ保有者の回答率に差があると、これらの集団を比較してもバイアスがあるって批判されるかもしれない」
+:::
 
-**私「それって交絡のこと？」**
+::: voice-daughter
+私「それって交絡のこと？」
+:::
 
+::: voice-father
 お父さん「交絡もバイアスの一種だけど、違う。これは母集団からのサンプル抽出に影響する”選択バイアス”といって区別されるんだ。それに、年収って尋ねられると、過大申告してしまいがちだよね。このように集めた情報自体に偏りがあることを、”情報バイアス”と呼んでいる。調査方法について授業するときは、選択バイアス、情報バイアス、交絡の3つに気をつけなさいって教えるようにしている。一部の対象者ばかり選ばれないようにしなさい、情報を集めるときはバイアスが入らないように配慮しなさい、集団を比較するときは、比較したい要因以外の特徴を揃えるようにしなさいってね」
+:::
 
-**私「ふーん。やっぱり臨床研究って言葉遣いがよくわかんないな。まあいっか」**
+::: voice-daughter
+私「ふーん？選択バイアス、情報バイアスねえ？やっぱり臨床研究って言葉遣いがよくわかんないな。まあいっか」**
+:::
 
 ::: callout-note
 <img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **ランダム誤差とバイアス**
