--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -25,63 +25,63 @@
 
 -   [Study design I](study-design-1.qmd)
 -   [Study design II](study-design-2.qmd)
--   [Study design III](study-design-3.qmd)
--   [Study design IV](study-design-4.qmd)
--   [Study design V](study-design-5.qmd)
+-   [Study design III]
+-   [Study design IV]
+-   [Study design V]
 
 ### 2. Clinical trial（臨床試験）
 
 ランダム化、盲検化、サンプルサイズなど「臨床試験」の話。
 
--   [Clinical trial I](clinical-trial-1.qmd)
--   [Clinical trial II](clinical-trial-2.qmd)
--   [Clinical trial III](clinical-trial-3.qmd)
+-   [Clinical trial I]
+-   [Clinical trial II]
+-   [Clinical trial III]
 
 ### 3. Epidemiology（疫学）
 
 集団同士を比較するとき、どういう指標が用いられるか。
 
--   [Epidemiology I](epidemiology-1.qmd)
--   [Epidemiology II](epidemiology-2.qmd)
--   [Epidemiology III](epidemiology-3.qmd)
--   [Epidemiology IV](epidemiology-4.qmd)
+-   [Epidemiology I]
+-   [Epidemiology II]
+-   [Epidemiology III]
+-   [Epidemiology IV]
 
 ### 4. Regression（回帰分析）
 
 ロジスティック回帰を用いたデータ解析について。
 
--   [Regression I](logistic-regression-1.qmd)
--   [Regression II](logistic-regression-2.qmd)
--   [Regression III](logistic-regression-3.qmd)
--   [Regression IV](logistic-regression-4.qmd)
+-   [Regression I]
+-   [Regression II]
+-   [Regression III]
+-   [Regression IV]
 
 ### 5. Causal inference（因果推論）
 
 グラフ（DAG）を用いた因果推論の考え方。
 
--   [Causal inference I](causal-inference-1.qmd)
--   [Causal inference II](causal-inference-2.qmd)
--   [Causal inference III](causal-inference-3.qmd)
--   [Causal inference IV](causal-inference-4.qmd)
+-   [Causal inference I]
+-   [Causal inference II]
+-   [Causal inference III]
+-   [Causal inference IV]
 
-### 6. Publish a paper（論文化）
+### 6. Publish a paper（論文投稿）
 
 図表の作り方、査読コメント、STROBE、推敲のコツ。
 
--   [Publish a paper I](publish-a-paper-1.qmd)
--   [Publish a paper II](publish-a-paper-2.qmd)
--   [Publish a paper III](publish-a-paper-3.qmd)
--   [Publish a paper IV](publish-a-paper-4.qmd)
+-   [Publish a paper I]
+-   [Publish a paper II]
+-   [Publish a paper III]
+-   [Publish a paper IV]
 
 ------------------------------------------------------------------------
 
 ## 読み方
 
--   はじめの4本（Study design I–V）だけ読めば、研究のゴールをどう設定するかが見えてきます。
+-   最初のシリーズ（Study design I–V）だけ読めば、研究のゴールをどう設定するかが見えてきます。
 -   興味で選ぶなら
     -   論文の読み方 → Clinical trial
     -   研究から得られる数字の意味 → Epidemiology
     -   統計解析の実践 → Regression
     -   統計解析をもう一歩深く → Causal inference
     -   書き方 → Publish a paper
--   すべて独立して読めるけれど、通読すると「地図」が頭に入ります。気軽に楽しんで！
+-   すべて独立して読めるけれど、通読すると「地図」が頭に入ります。要するに、研究を題材にした気軽な読み物だと思ってください。
